[EBVN-02] Introduce API link shorten (#2)
* [FEAT] Introduce API Link shorten

* update gitignore

* update by feedback review

* update by feedback review #2

* remove threshold

* update unit test

* add docstring

* handle err redis connect fail

* update by feedback

---------
